--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@theme {
+	--color-dark-mode-elements: hsl(209, 23%, 22%);
+	--color-dark-mode-background: hsl(207, 26%, 17%);
+	--color-dark-mode-text: hsl(0, 0%, 100%);
+	--color-light-mode-text: hsl(200, 15%, 8%);
+	--color-light-mode-input: hsl(0, 0%, 52%);
+	--color-light-mode-background: hsl(0, 0%, 98%);
+	--color-light-mode-elements: hsl(0, 0%, 100%);
+}
