--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
 
 @theme {
 	--color-dark-mode-elements: hsl(209, 23%, 22%);
@@ -8,4 +9,6 @@
 	--color-light-mode-input: hsl(0, 0%, 52%);
 	--color-light-mode-background: hsl(0, 0%, 98%);
 	--color-light-mode-elements: hsl(0, 0%, 100%);
+
+	--font-brand-family: "Nunito Sans", sans-serif;
 }
